--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ jupyter-core==4.4.0
 Keras==2.2.2
 Keras-Applications==1.0.4
 Keras-Preprocessing==1.0.2
+keras-resnet==0.1.0
 kiwisolver==1.0.1
 Markdown==2.6.11
 MarkupSafe==1.0
@@ -68,6 +69,7 @@ terminado==0.8.1
 testpath==0.3.1
 toolz==0.9.0
 tornado==5.1
+tqdm==4.25.0
 traitlets==4.3.2
 wcwidth==0.1.7
 webencodings==0.5.1
